# emosaic

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: colorutils.rs  imageutils.rs  main.rs  mosaic.rs
src/mosaic/: color.rs  image.rs  mod.rs
