[package]
name = "emosaic"
version = "0.2.0"
authors = ["Will Dady <willdady@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.22.0"
clap = { version = "3.2.20", features = ["derive"] }
rand = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
